--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.app2">
+    package="com.example.food_delivery_app">
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -14,32 +14,33 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <service
-            android:name=".Service.ListenOrder"
+            android:name="com.example.food_delivery_app.Service.ListenOrder"
             android:enabled="true"
-            android:exported="true">
+            android:exported="true"></service>
 
-        </service>
-
-        <activity android:name=".OrderStatus" />
-        <activity android:name=".Cart" />
-        <activity android:name=".FoodDetails" />
-        <activity android:name=".FoodList" />
-        <activity android:name=".PaymentGateway"/>
+        <activity android:name="com.example.food_delivery_app.OrderStatus" />
+        <activity android:name="com.example.food_delivery_app.Cart" />
+        <activity android:name="com.example.food_delivery_app.FoodDetails" />
+        <activity android:name="com.example.food_delivery_app.FoodList" />
+        <activity android:name="com.example.food_delivery_app.PaymentGateway" />
         <activity
-            android:name=".Home"
+            android:name="com.example.food_delivery_app.Home"
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".SignUp" />
-        <activity android:name=".SignIn" />
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.food_delivery_app.SignUp" />
+        <activity android:name="com.example.food_delivery_app.SignIn" />
+        <activity android:name="com.example.food_delivery_app.MainActivity"/>
+        <activity
+            android:name="com.example.food_delivery_app.Launch"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
