--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,7 @@ dependencies {
     implementation "com.google.android.gms:play-services-base:17.2.1"
     implementation 'info.hoang8f:fbutton:1.0.5'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+
 }
 
