--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,14 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
+
 android {
-    compileSdkVersion 29
+    compileSdkVersion 33
     buildToolsVersion "29.0.3"
 
     defaultConfig {
         applicationId "com.example.app2"
-        minSdkVersion 19
-        targetSdkVersion 29
+        minSdkVersion 24
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
 
@@ -21,7 +22,12 @@ android {
         }
     }
 
+    dataBinding {
+        enabled = true
+    }
+
 }
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -39,12 +45,12 @@ dependencies {
     implementation 'info.hoang8f:fbutton:1.0.5'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     implementation 'com.google.firebase:firebase-database:19.2.0'
-    implementation 'com.android.support:cardview-v7:26.+'
-    implementation 'com.android.support:recyclerview-v7:26.+'
+//    implementation 'com.android.support:cardview-v7:26.+'
+//    implementation 'com.android.support:recyclerview-v7:26.+'
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
-    implementation "com.android.support:design:26.+"
-    implementation 'com.android.support:appcompat-v7:26.+'
+//    implementation "com.android.support:design:26.+"
+//    implementation 'com.android.support:appcompat-v7:26.+'
     implementation "com.cepheuen.elegant-number-button:lib:1.0.2"
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.firebaseui:firebase-ui-database:1.2.0'
@@ -55,6 +61,20 @@ dependencies {
     implementation "com.google.android.gms:play-services-base:17.2.1"
     implementation 'info.hoang8f:fbutton:1.0.5'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+
+    def lifecycle_version = "2.0.0"
+
+    implementation  "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    // alternately - if using Java8, use the following instead of lifecycle-compiler
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+    // ViewModel and LiveData
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    // alternatively - just ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+
+    implementation 'com.intuit.sdp:sdp-android:1.1.0'
+    implementation 'com.intuit.ssp:ssp-android:1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.15.1'
 
 }
